Lenguaje IA/MLParser.py
# Generated from ML.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MLParser ( Parser ):

    grammarFileName = "ML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "'('", "')'", "'plotTrig'", 
                     "','", "'^'", "'*'", "'/'", "'%'", "'+'", "'-'", "'['", 
                     "']'", "'sin'", "'cos'", "'tan'", "'asin'", "'acos'", 
                     "'atan'", "'plt'", "'.'", "'plot'", "'scatter'", "'show'", 
                     "'figure'", "'savefig'", "'..'", "'range'", "'calc'", 
                     "'predecir'", "'matrix'", "'='", "'if'", "'{'", "'}'", 
                     "'else'", "'while'", "'for'", "'in'", "'step'", "'read'", 
                     "'write'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'add'", "'subtract'", "'multiply'", 
                     "'inverse'", "'transpose'", "'++'", "'--'", "'random'", 
                     "'regresion'", "'perceptron'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "ID", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_printStatement = 2
    RULE_plotTrig = 3
    RULE_expression = 4
    RULE_list = 5
    RULE_primaryExpression = 6
    RULE_trigFunction = 7
    RULE_range = 8
    RULE_arithmeticStatement = 9
    RULE_matrixStatement = 10
    RULE_assignment = 11
    RULE_incrementStatement = 12
    RULE_loopStatement = 13
    RULE_condicionalStatement = 14
    RULE_ifStatement = 15
    RULE_ifElseStatement = 16
    RULE_ifElseIfStatement = 17
    RULE_whileLoop = 18
    RULE_forLoop = 19
    RULE_fileStatement = 20
    RULE_comparisonExpression = 21
    RULE_compareOp = 22
    RULE_matrix = 23
    RULE_matrixOperation = 24
    RULE_matrixFunction = 25
    RULE_matrixAccess = 26
    RULE_incrementOp = 27
    RULE_variable = 28
    RULE_randomStatement = 29
    RULE_regresionStatement = 30
    RULE_perceptronStatement = 31
    RULE_functionCall = 32
    RULE_literal = 33
    RULE_plotStatement = 34

    ruleNames =  [ "program", "statement", "printStatement", "plotTrig", 
                   "expression", "list", "primaryExpression", "trigFunction", 
                   "range", "arithmeticStatement", "matrixStatement", "assignment", 
                   "incrementStatement", "loopStatement", "condicionalStatement", 
                   "ifStatement", "ifElseStatement", "ifElseIfStatement", 
                   "whileLoop", "forLoop", "fileStatement", "comparisonExpression", 
                   "compareOp", "matrix", "matrixOperation", "matrixFunction", 
                   "matrixAccess", "incrementOp", "variable", "randomStatement", 
                   "regresionStatement", "perceptronStatement", "functionCall", 
                   "literal", "plotStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    NUMBER=61
    ID=62
    STRING=63
    WS=64
    COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLParser.StatementContext)
            else:
                return self.getTypedRuleContext(MLParser.StatementContext,i)


        def getRuleIndex(self):
            return MLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.statement()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 6629305673226108946) != 0)):
                    break

            self.state = 75
            self.match(MLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmeticStatement(self):
            return self.getTypedRuleContext(MLParser.ArithmeticStatementContext,0)


        def matrixStatement(self):
            return self.getTypedRuleContext(MLParser.MatrixStatementContext,0)


        def fileStatement(self):
            return self.getTypedRuleContext(MLParser.FileStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(MLParser.LoopStatementContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MLParser.AssignmentContext,0)


        def incrementStatement(self):
            return self.getTypedRuleContext(MLParser.IncrementStatementContext,0)


        def regresionStatement(self):
            return self.getTypedRuleContext(MLParser.RegresionStatementContext,0)


        def perceptronStatement(self):
            return self.getTypedRuleContext(MLParser.PerceptronStatementContext,0)


        def matrixAccess(self):
            return self.getTypedRuleContext(MLParser.MatrixAccessContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(MLParser.PrintStatementContext,0)


        def condicionalStatement(self):
            return self.getTypedRuleContext(MLParser.CondicionalStatementContext,0)


        def trigFunction(self):
            return self.getTypedRuleContext(MLParser.TrigFunctionContext,0)


        def plotStatement(self):
            return self.getTypedRuleContext(MLParser.PlotStatementContext,0)


        def randomStatement(self):
            return self.getTypedRuleContext(MLParser.RandomStatementContext,0)


        def getRuleIndex(self):
            return MLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.arithmeticStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.matrixStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.fileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.loopStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.assignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.incrementStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 83
                self.regresionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 84
                self.perceptronStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 85
                self.matrixAccess()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 86
                self.printStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 87
                self.condicionalStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 88
                self.trigFunction()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 89
                self.plotStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 90
                self.randomStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MLParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = MLParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MLParser.T__0)
            self.state = 94
            self.match(MLParser.T__1)
            self.state = 95
            self.expression(0)
            self.state = 96
            self.match(MLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlotTrigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trigFunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLParser.TrigFunctionContext)
            else:
                return self.getTypedRuleContext(MLParser.TrigFunctionContext,i)


        def range_(self):
            return self.getTypedRuleContext(MLParser.RangeContext,0)


        def getRuleIndex(self):
            return MLParser.RULE_plotTrig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlotTrig" ):
                listener.enterPlotTrig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlotTrig" ):
                listener.exitPlotTrig(self)




    def plotTrig(self):

        localctx = MLParser.PlotTrigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_plotTrig)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MLParser.T__3)
            self.state = 99
            self.match(MLParser.T__1)
            self.state = 100
            self.trigFunction()
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 101
                    self.match(MLParser.T__4)
                    self.state = 102
                    self.trigFunction() 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 108
            self.match(MLParser.T__4)
            self.state = 109
            self.range_()
            self.state = 110
            self.match(MLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(MLParser.PrimaryExpressionContext,0)


        def list_(self):
            return self.getTypedRuleContext(MLParser.ListContext,0)


        def trigFunction(self):
            return self.getTypedRuleContext(MLParser.TrigFunctionContext,0)


        def NUMBER(self):
            return self.getToken(MLParser.NUMBER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return MLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 113
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.state = 114
                self.list_()
                pass

            elif la_ == 3:
                self.state = 115
                self.trigFunction()
                pass

            elif la_ == 4:
                self.state = 116
                self.match(MLParser.NUMBER)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 128
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = MLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 119
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 120
                        self.match(MLParser.T__5)
                        self.state = 121
                        self.expression(7)
                        pass

                    elif la_ == 2:
                        localctx = MLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 122
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 123
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 124
                        self.expression(6)
                        pass

                    elif la_ == 3:
                        localctx = MLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 125
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 126
                        _la = self._input.LA(1)
                        if not(_la==10 or _la==11):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 127
                        self.expression(5)
                        pass

             
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return MLParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)




    def list_(self):

        localctx = MLParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MLParser.T__11)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & -2305843009211609084) != 0):
                self.state = 134
                self.expression(0)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 135
                    self.match(MLParser.T__4)
                    self.state = 136
                    self.expression(0)
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 144
            self.match(MLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(MLParser.LiteralContext,0)


        def ID(self):
            return self.getToken(MLParser.ID, 0)

        def matrixAccess(self):
            return self.getTypedRuleContext(MLParser.MatrixAccessContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(MLParser.FunctionCallContext,0)


        def expression(self):
            return self.getTypedRuleContext(MLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MLParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)




    def primaryExpression(self):

        localctx = MLParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primaryExpression)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(MLParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.matrixAccess()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.functionCall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 150
                self.match(MLParser.T__1)
                self.state = 151
                self.expression(0)
                self.state = 152
                self.match(MLParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrigFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return MLParser.RULE_trigFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrigFunction" ):
                listener.enterTrigFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrigFunction" ):
                listener.exitTrigFunction(self)




    def trigFunction(self):

        localctx = MLParser.TrigFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_trigFunction)
        self._la = 0 # Token type
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 16, 17, 18, 19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1032192) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 157
                self.match(MLParser.T__1)
                self.state = 158
                self.expression(0)
                self.state = 159
                self.match(MLParser.T__2)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(MLParser.T__19)
                self.state = 162
                self.match(MLParser.T__20)
                self.state = 163
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 130023424) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 164
                self.match(MLParser.T__1)
                self.state = 165
                self.expression(0)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 166
                    self.match(MLParser.T__4)
                    self.state = 167
                    self.expression(0)
                    self.state = 172
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 173
                self.match(MLParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return MLParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = MLParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_range)
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 12, 14, 15, 16, 17, 18, 19, 20, 61, 62, 63]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.expression(0)
                self.state = 178
                self.match(MLParser.T__26)
                self.state = 179
                self.expression(0)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(MLParser.T__27)
                self.state = 182
                self.match(MLParser.T__1)
                self.state = 183
                self.expression(0)
                self.state = 184
                self.match(MLParser.T__4)
                self.state = 185
                self.expression(0)
                self.state = 186
                self.match(MLParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MLParser.RULE_arithmeticStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticStatement" ):
                listener.enterArithmeticStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticStatement" ):
                listener.exitArithmeticStatement(self)




    def arithmeticStatement(self):

        localctx = MLParser.ArithmeticStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arithmeticStatement)
        try:
            self.state = 200
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.match(MLParser.T__28)
                self.state = 191
                self.match(MLParser.T__1)
                self.state = 192
                self.expression(0)
                self.state = 193
                self.match(MLParser.T__2)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 195
                self.match(MLParser.T__29)
                self.state = 196
                self.match(MLParser.T__1)
                self.state = 197
                self.expression(0)
                self.state = 198
                self.match(MLParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MLParser.ID, 0)

        def matrix(self):
            return self.getTypedRuleContext(MLParser.MatrixContext,0)


        def matrixOperation(self):
            return self.getTypedRuleContext(MLParser.MatrixOperationContext,0)


        def getRuleIndex(self):
            return MLParser.RULE_matrixStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixStatement" ):
                listener.enterMatrixStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixStatement" ):
                listener.exitMatrixStatement(self)




    def matrixStatement(self):
